Working on product

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                 <h1 class="product__description-title-main">RESTORATIVE HAIR MASK</h1>
                 <h4 class="product__description-title-sub">NUTURISHMENT IN A BOTTLE</h4>
             </div>
+            <!-- <hr class="product__description-line"> -->
             <div class="product__description-text-icons">
                 <p class="product__description-text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tempor commodo ullamcorper a lacus vestibulum. Luctus accumsan tortor posuere ac ut.
@@ -101,7 +102,7 @@
             <div class="product__purchase-options">
                 <div class="product__option">
                     <input type="radio" name="purchase-option" value="buy-once" checked>
-                    <label for="buy-once" class="circle-label">Buy Once</label>
+                    <label for="buy-once" class="circle-label">Buy Once | $38</label>
                 </div>
                 <div class="product__option">
                     <input type="radio"name="purchase-option" value="subscribe">
