Working on input

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </div>
                 <div class="product__option">
                     <input type="radio"name="purchase-option" value="subscribe">
-                    <label for="subscribe" class="circle-label">Subscribe(SAVE 20%) | $30</label>
+                    <label for="subscribe" class="circle-label">Subscribe(SAVE 20%) | <span>$30</span></label>
                 </div>
             </div>
 
