--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stylesheet/style.css">
+    <link rel="stylesheet" href="resources/scss/style.scss">
     <link href="./node_modules/@ohepworthbell/quantityinput/example/style.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap">
@@ -160,5 +160,6 @@
 </div>
 
 <script src="./node_modules/@ohepworthbell/quantityinput/example/script.js" type="module"></script>
+<script src="./resources/js/main.js"></script>
 </body>
 </html>
