--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <main class="product">
         <section class="product__category">
             <div class="product__category-image">
-                <img src="images/product-image-obsi.png" alt="Product Image">
+                <img src="resources/images/product-image-obsi.png" alt="Product Image">
             </div>
             <div class="product__category-arrow">
                 <div>
@@ -79,19 +79,19 @@
                 </p>
                 <div class="product__description-icons">
                     <div class="product__description-icon">
-                        <img src="images/firstIconObsi.png" alt="Icon" class="product__description-icon-image">
+                        <img src="resources/images/firstIconObsi.png" alt="Icon" class="product__description-icon-image">
                         <p class="product__description-icon-text">100% ORGANIC</p>
                     </div>
                     <div class="product__description-icon">
-                        <img src="images/firstIconObsi.png" alt="Icon" class="product__description-icon-image">
+                        <img src="resources/images/firstIconObsi.png" alt="Icon" class="product__description-icon-image">
                         <p class="product__description-icon-text">100% ORGANIC</p>
                     </div>
                     <div class="product__description-icon">
-                        <img src="images/firstIconObsi.png" alt="Icon" class="product__description-icon-image">
+                        <img src="resources/images/firstIconObsi.png" alt="Icon" class="product__description-icon-image">
                         <p class="product__description-icon-text">100% ORGANIC</p>
                     </div>
                     <div class="product__description-icon">
-                        <img src="images/firstIconObsi.png" alt="Icon" class="product__description-icon-image">
+                        <img src="resources/images/firstIconObsi.png" alt="Icon" class="product__description-icon-image">
                         <p class="product__description-icon-text">100% ORGANIC</p>
                     </div>
                 </div>
