--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
 <script src="./node_modules/@ohepworthbell/quantityinput/example/script.js" type="module"></script>
 <script src="./resources/js/main.js"></script>
-<script src="./resources/js/carousel.js"></script>
+<script src="./resources/js/accordions.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
 </html>
