--- a/index.html
+++ b/index.html
@@ -124,17 +124,21 @@
         <section class="product__accordion">
             <button class="product__accordion-button">Ingrediants</button>
             <div class="product__accordion-panel">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam autem laborum possimus aperiam provident a quasi illo cum. Possimus, quidem.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam autem laborum possimus aperiam provident a quasi illo cum. Possimus, quidem.  
+                </p>
             </div>
             
             <button class="product__accordion-button">Indrediants second</button>
             <div class="product__accordion-panel">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem temporibus perferendis ut ea illo repellat nemo voluptas, vitae aperiam beatae odio? Laborum quidem rem dolor totam, consequuntur ratione perferendis impedit.</p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem temporibus perferendis ut ea illo repellat nemo voluptas, vitae aperiam beatae odio? Laborum quidem rem dolor totam, consequuntur ratione perferendis impedit.
+                </p>
             </div>
             
             <button class="product__accordion-button">Ingrediants third</button>
             <div class="product__accordion-panel">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt nemo vero commodi tenetur quae placeat? Reprehenderit aliquam nesciunt delectus obcaecati corrupti blanditiis, rerum eius, aperiam non, perferendis quidem numquam cumque.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt nemo vero commodi tenetur quae placeat? Reprehenderit aliquam nesciunt delectus obcaecati corrupti blanditiis, rerum eius, aperiam non, perferendis quidem numquam cumque.
+                </p>
             </div>
         </section>
 
