--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="resources/scss/style.scss">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -138,32 +139,30 @@
             </div>
         </section>
 
-        <div class="gallery-wrapper">
-            <img src="resources/images/back.png" id="backBtn"  alt="">
-            <section class="product__gallery">
-                <div class="product__gallery-items">
-                    <span><img src="resources/images/image-1.png" alt=""></span>
-                    <span><img src="resources/images/image-4.png" alt=""></span>
-                    <span><img src="resources/images/image-2.png" alt=""></span>
-                </div>
-                <div class="product__gallery-items">
-                    <span><img src="resources/images/image-4.png" alt=""></span>
-                </div>
-                <div class="product__gallery-items">
-                    <span><img src="resources/images/image-2.png" alt=""></span>
-                </div>
-                <div class="product__gallery-items">
-                    <span><img src="resources/images/image-4.png" alt=""></span>
-                </div>
-            </section>
-            <img src="resources/images/next.png" id="nextBtn"  alt="">
+    <!-- Swiper -->
+    <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide"><img src="resources/images/image-1.png" alt=""></div>
+          <div class="swiper-slide"><img src="resources/images/image-2.png" alt=""></div>
+          <div class="swiper-slide"><img src="resources/images/image-3.png" alt=""></div>
+          <div class="swiper-slide"><img src="resources/images/image-4.png" alt=""></div>
+          <div class="swiper-slide"><img src="resources/images/image-5.png" alt=""></div>
+          <div class="swiper-slide"><img src="resources/images/image-6.png" alt=""></div>
+          <div class="swiper-slide"><img src="resources/images/image-1.png" alt=""></div>
+          <div class="swiper-slide"><img src="resources/images/image-2.png" alt=""></div>
         </div>
+        <div class="swiper-pagination"></div>
+      </div>
+
+
     </main>
     
 </div>
 
 <script src="./node_modules/@ohepworthbell/quantityinput/example/script.js" type="module"></script>
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script src="./resources/js/main.js"></script>
+
 
 </body>
 </html>
